# transformer-course

./: README.md  pipelines.py  pyproject.toml
chapter 2/: model.py  pipeline.py
